Update angular-bootstrap and fix settings show/hide (use collapse instead of accordion)

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -98,20 +98,6 @@ body {
     margin-bottom: 0;
 }
 
-.flat-accordion {
-    .panel-heading {
-        padding: 0;
-    }
-
-    .panel {
-        border: 0;
-    }
-
-    .panel-body {
-        border-top: 0 !important;
-    }
-}
-
 .no-side-padding {
     padding-left: 0;
     padding-right: 0;
